feat: seed project details
